# ov-prompter

./: .gitignore  Makefile  README.md  build.sh  download-ext-libs.sh
.github/workflows/: release.yml
packaging/aur/: PKGBUILD
packaging/debian/: build-deb.sh  changelog  control  rules
src/: CMakeLists.txt  ov-prompter.1  ov-prompter.cpp
